--- a/tpc/.classpath
+++ b/tpc/.classpath
@@ -2,6 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="pregen/media.dsl"/>
+	<classpathentry kind="src" path="build/gen/media.dsl"/>
 	<classpathentry kind="src" path="pregen/media.thrift/gen-javabean"/>
 	<classpathentry kind="src" path="pregen/media.proto"/>
 	<classpathentry kind="src" path="build/gen/media.tcks"/>
@@ -53,8 +55,8 @@
 	<classpathentry kind="lib" path="lib/protostuff-json-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/protostuff-runtime-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/protostuff-xml-1.0.1.jar"/>
-	<classpathentry kind="lib" path="lib/sbinary-0.3.1-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="lib/scala-library-2.8.0-rc1.jar"/>
+	<classpathentry kind="lib" path="lib/sbinary_2.11-0.4.3-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/scala-library-2.11.2.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.5.10.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-nop-1.5.10.jar"/>
 	<classpathentry kind="lib" path="lib/snakeyaml-1.1.jar"/>
@@ -82,19 +84,20 @@
 	<classpathentry kind="lib" path="lib/exi-exificient-0.9.1.jar"/>
 	<classpathentry kind="lib" path="lib/bson4jackson-2.3.0.jar"/>
 	<classpathentry kind="lib" path="lib/fst-1.42.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-annotations-2.4.0.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-core-2.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-databind-2.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-dataformat-avro-2.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-dataformat-cbor-2.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-dataformat-smile-2.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-dataformat-xml-2.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-dataformat-yaml-2.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-jr-objects-2.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-module-afterburner-2.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-module-jaxb-annotations-2.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-annotations-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-core-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-databind-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-dataformat-avro-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-dataformat-cbor-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-dataformat-smile-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-dataformat-xml-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-dataformat-yaml-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-jr-objects-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-module-afterburner-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-module-jaxb-annotations-2.5.0.jar"/>
 	<classpathentry kind="lib" path="lib/kryo-2.23.0.jar"/>
 	<classpathentry kind="lib" path="lib/msgpack-0.6.9.jar"/>
 	<classpathentry kind="lib" path="lib/stephenerialization-3.0.0.jar"/>
+	<classpathentry kind="lib" path="/home/hperadin/code/serialization/jvm-serializers/tpc/lib/dsl-client-java-1.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
