Default string values in serialization

--- a/tpc/Makefile
+++ b/tpc/Makefile
@@ -136,10 +136,10 @@ else ifneq ($(findstring .dsl,$(2)),)
 		-namespace=serializers.dslplatform \
 		-target=java_client \
 		-no-prompt \
-		-compiler=./dsl-compiler.exe \
-		-dependencies:java_client=dependencies \
+		-compiler \
+		-dependencies:java_client=$(dslplatform_dir)/dependencies \
 		-java_client=$(dslplatform_dir)/model.jar \
-		-download -log
+		-download
 	$(p1)cp -r $(dslplatform_dir)/tmp/java_client/serializers build/gen/$(2)
 else
 endif
