--- a/tpc/.classpath
+++ b/tpc/.classpath
@@ -3,7 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="pregen/media.dsl"/>
-	<classpathentry kind="src" path="build/gen/media.dsl"/>
 	<classpathentry kind="src" path="pregen/media.thrift/gen-javabean"/>
 	<classpathentry kind="src" path="pregen/media.proto"/>
 	<classpathentry kind="src" path="build/gen/media.tcks"/>
@@ -56,7 +55,7 @@
 	<classpathentry kind="lib" path="lib/protostuff-runtime-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/protostuff-xml-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/sbinary_2.11-0.4.3-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="lib/scala-library-2.11.2.jar"/>
+	<classpathentry kind="lib" path="lib/scala-library_2.11.2.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.5.10.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-nop-1.5.10.jar"/>
 	<classpathentry kind="lib" path="lib/snakeyaml-1.1.jar"/>
